--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>React App</title>
+    <title>Paint</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <meta name="Paint online" content="You can draw online"/>
     <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
